corrections for the profile picture alignment

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -69,30 +69,8 @@ nav span {
   width: 100%;
 }
 
-
-
-
-/* Another tablet breakpoint is minimum width of 768px */
-@media only screen and (max-width: 768px) {
-  /* Write CSS rules that target Tablets screen sizes upwards - including desktops */
-  .header {
-      padding-top: 150px;
-      margin-left: 0px;
-      width: 100%;
-  }
-
-  .nav {
-      padding-top: 0px;
-      background-color: #28a745;
-      background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
-  }
-
-  .app-container{
-      display: flex;
-      flex-direction: column;
-  }
-  main {
-      width: 100%;
-      padding-top: 20px;
-  }
+main {
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 5em;
 }
